# E-CON

./: .env.example  .gitignore  CODEX.md  Dockerfile  README.md  docker-compose.yml  index.html  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/: conftest.py
apps/accounts/: apps.py  factories.py  managers.py  urls.py
apps/ai_matching/: apps.py  urls.py
apps/analytics/: apps.py  urls.py
apps/applications/: apps.py  urls.py
apps/audit/: apps.py  urls.py
apps/companies/: apps.py  urls.py
apps/documents/: apps.py  urls.py
apps/evaluations/: apps.py  urls.py
apps/institutions/: apps.py  urls.py
apps/internships/: apps.py  urls.py
apps/notifications/: apps.py  urls.py
apps/offers/: apps.py  urls.py
apps/tracking/: apps.py  urls.py
config/: __init__.py  asgi.py  celery.py  dashboard.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Cahier_des_Charges_SIMP_BryanSeidy.docx  ROADMAP_EXECUTION.md
src/: App.vue.js  App.vue.js.map  main.js  main.js.map  main.ts  style.css
src/api/: auth.js  auth.js.map  auth.ts  endpoints.js  endpoints.js.map  endpoints.ts  http.js  http.js.map  http.ts  openapi.json  resource.js  resource.js.map  resource.ts
src/composables/: useToast.ts
src/layouts/: AppShell.vue  AppShell.vue.js  AppShell.vue.js.map
src/pages/: DashboardPage.vue  DashboardPage.vue.js  DashboardPage.vue.js.map  DocumentsPage.vue  DocumentsPage.vue.js  DocumentsPage.vue.js.map  LandingPage.vue  PlaceholderPage.vue  PlaceholderPage.vue.js  (+4 more)
tests/: conftest.py  test_foundations.py  test_integration_flows.py  test_mvp_workflow.py  test_rbac.py
(+157 files in other folders)
