[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "econ-backend"
version = "0.1.0"
description = "Enterprise-grade Django backend foundations for E-CON."
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4,<6",
    "django>=5.0,<6",
    "djangorestframework>=3.15,<4",
    "djangorestframework-simplejwt>=5.3,<6",
    "drf-spectacular>=0.27,<1",
    "psycopg[binary]>=3.2,<4",
    "redis>=5,<6",
]

[project.optional-dependencies]
dev = [
    "black>=24.0,<25",
    "django-stubs>=5.0,<6",
    "factory-boy>=3.3,<4",
    "mypy>=1.10,<2",
    "pytest>=8,<9",
    "pytest-django>=4.8,<5",
    "pytest-cov>=5,<6",
    "ruff>=0.5,<1",
]

[tool.setuptools.packages.find]
include = ["apps*", "config*"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["apps", "config", "tests"]

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "DJ",
    "E",
    "F",
    "I",
    "N",
    "UP",
    "W",
]
ignore = [
    "DJ001",
]

[tool.ruff.lint.per-file-ignores]
"config/settings/*.py" = ["F403", "F405"]
"*/tests/*" = ["S101"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
check_untyped_defs = true
mypy_path = "."
exclude = [".venv", "venv", "migrations"]

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--strict-markers"
